--- a/TournamentServer/TournamentServer.csproj
+++ b/TournamentServer/TournamentServer.csproj
@@ -7,4 +7,9 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.Network.ExternalShared\Core.Network.ExternalShared.csproj" />
+      <ProjectReference Include="..\Core\Core.Network\Core.Network.csproj" />
+    </ItemGroup>
+
 </Project>
